[gd_scene load_steps=8 format=3 uid="uid://bmiuichhpkbl6"]

[ext_resource type="Script" path="res://assets/scripts/RhythmGame.gd" id="1_0l3ip"]
[ext_resource type="AudioStream" uid="uid://dnseffipfenh2" path="res://assets/sound/music/TestTrack.ogg" id="2_imu0c"]
[ext_resource type="Script" path="res://assets/scripts/ArrowRig.gd" id="3_mup7y"]
[ext_resource type="Texture2D" uid="uid://f6n2xhwlyx3g" path="res://assets/sprites/buttons/button_down.png" id="4_bgnor"]
[ext_resource type="Texture2D" uid="uid://c28lfo3hm582w" path="res://assets/sprites/buttons/button_left.png" id="4_uo2ed"]
[ext_resource type="Texture2D" uid="uid://dwiju0fov8nv5" path="res://assets/sprites/buttons/button_up.png" id="5_v6ctn"]
[ext_resource type="Texture2D" uid="uid://bqx06lfcumfn" path="res://assets/sprites/buttons/button_right.png" id="7_1i6wh"]

[node name="RhythmGame" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_0l3ip")

[node name="PrincipalTrack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_imu0c")
autoplay = true
bus = &"Principal"

[node name="FluteTrack" type="AudioStreamPlayer2D" parent="."]
bus = &"Ney"

[node name="ComboTrack" type="AudioStreamPlayer2D" parent="."]
bus = &"Combo"

[node name="ArrowRig" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -100.0
offset_bottom = -100.0
script = ExtResource("3_mup7y")

[node name="Lanes" type="HFlowContainer" parent="ArrowRig"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.5
offset_top = -400.0
offset_right = 126.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Lane1" type="VFlowContainer" parent="ArrowRig/Lanes"]
custom_minimum_size = Vector2(50, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Target" type="TextureRect" parent="ArrowRig/Lanes/Lane1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_uo2ed")
expand_mode = 5

[node name="SpawnAnchor" type="Control" parent="ArrowRig/Lanes/Lane1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Spawn" type="Node2D" parent="ArrowRig/Lanes/Lane1/SpawnAnchor"]

[node name="Sep1" type="VSeparator" parent="ArrowRig/Lanes"]
visible = false
layout_mode = 2

[node name="Lane2" type="VFlowContainer" parent="ArrowRig/Lanes"]
custom_minimum_size = Vector2(50, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Target" type="TextureRect" parent="ArrowRig/Lanes/Lane2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_v6ctn")
expand_mode = 5

[node name="SpawnAnchor" type="Control" parent="ArrowRig/Lanes/Lane2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Spawn" type="Node2D" parent="ArrowRig/Lanes/Lane2/SpawnAnchor"]

[node name="Sep2" type="VSeparator" parent="ArrowRig/Lanes"]
visible = false
layout_mode = 2

[node name="Lane3" type="VFlowContainer" parent="ArrowRig/Lanes"]
custom_minimum_size = Vector2(50, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Target" type="TextureRect" parent="ArrowRig/Lanes/Lane3"]
modulate = Color(1, 1, 11.834, 1)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("4_bgnor")
expand_mode = 5

[node name="SpawnAnchor" type="Control" parent="ArrowRig/Lanes/Lane3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Spawn" type="Node2D" parent="ArrowRig/Lanes/Lane3/SpawnAnchor"]

[node name="Sep3" type="VSeparator" parent="ArrowRig/Lanes"]
visible = false
layout_mode = 2

[node name="Lane4" type="VFlowContainer" parent="ArrowRig/Lanes"]
custom_minimum_size = Vector2(50, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Target" type="TextureRect" parent="ArrowRig/Lanes/Lane4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("7_1i6wh")
expand_mode = 5

[node name="SpawnAnchor" type="Control" parent="ArrowRig/Lanes/Lane4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Spawn" type="Node2D" parent="ArrowRig/Lanes/Lane4/SpawnAnchor"]

[node name="FluteDelay" type="Timer" parent="."]
wait_time = 2.0

[connection signal="beat" from="." to="." method="_on_beat"]
[connection signal="timeout" from="FluteDelay" to="." method="_on_timer_timeout"]
